# ferris-elf

./: Cargo.toml
bot/: Cargo.toml
bot/src/: commands.rs  database.rs  main.rs  runner.rs  utils.rs
resources/: Dockerfile
resources/runner/: Cargo.toml
resources/runner/benches/: bench.rs
resources/runner/src/: lib.rs
resources/worker/: Cargo.toml
resources/worker/src/: lib.rs  main.rs
src/: main.rs
