[package]
name = "ferris-elf"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3"
env_logger = "0.11"
log = "0.4"
poise = "0.6"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
time = { version = "0.3", features = ["macros"] }
tokio = { version = "1.41", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "io-util", "rt"] }

worker = { path = "../resources/worker" }
