[package]
name = "runner"
version = "0.1.0"
edition = "2024"

[[bench]]
name = "bench"
harness = false

[profile.bench]
debug = true

[dev-dependencies]
iai-callgrind = "0.14.0"

[dependencies]
arrayvec = "0.7"
atoi_radix10 = { git = "https://github.com/gilescope/atoi_radix10" }
bitvec = "1.0"
btoi = "0.4"
bytemuck = "1.20"
core_simd = { git = "https://github.com/rust-lang/portable-simd" }
dashmap = "6.1"
itertools = "0.13"
memchr = "2.7.4"
nom = "7.1"
parse-display = "0.10"
rayon = "1.10"
regex = "1.11"
smallvec = "1.13"
